--- a/index.html
+++ b/index.html
@@ -173,21 +173,17 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Precise control in modern robotic applications is always an open issue
-            due to the existence of unknown time-varying disturbances.
-            Existing meta-learning-based approaches require a shared representation on environmental structures,
-            which lack flexibility for realistic non-structural disturbances.
-            Besides, representation error and the loss of model generalizability 
-            can lead to heavy degradation of prediction accuracy.
-            This work introduces a meta-learning-based disturbance estimation framework with feedback-calibrated online adaptation.
-            With a generalizable spatial-temporal representation embedded with historical states information, 
-            non-structural disturbances can be fully reflected by meta-learning.
-            The online adaptation process is then calibrated by a state-feedback mechanism to attenuate the learning residual.
-            It shows that simultaneous convergence of both the online learning error 
-            and the disturbance estimation error can be achieved.
-            By incorporating the meta-learned model with a baseline controller,
-            it significantly outperforms the state-of-the-art methods
-            in the quadrotor flight control under multiple disturbances.
+            Precise control in modern robotic applications is always an open issue due to unknown time-varying disturbances. 
+            Existing meta-learning-based approaches require a shared representation of environmental structures, 
+            which lack flexibility for realistic non-structural disturbances. 
+            Besides, representation error and the loss of model generalizability can lead to heavy prediction accuracy degradation. 
+            This work introduces a meta-learning-based disturbance estimation framework with feedback-calibrated online adaptation. 
+            With a generalizable spatial-temporal representation embedded with historical state information, 
+            non-structural disturbances can be fully reflected by meta-learning. 
+            The online adaptation process is then calibrated by a state-feedback mechanism to attenuate the learning residual. 
+            Theoretical analysis shows that simultaneous convergence of both the online learning error 
+            and the disturbance estimation error can be achieved. By incorporating the meta-learned model with a baseline controller, 
+            it significantly outperforms the state-of-the-art methods in the quadrotor flight control under multiple disturbances. 
           </p>
         </div>
       </div>
