--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <section class="section hero-teaser">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-12">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
