--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Towards Non-Structural Disturbance Prediction with Feedback-Calibrated Meta-Adaptation</title>
+  <title>Towards Non-Structural Disturbance Prediction: Feedback-Calibrated Meta-Adaptation</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-2 publication-title">Towards Non-Structural Disturbance Prediction <br>with Feedback-Calibrated Meta-Adaptation</h1>
+            <h1 class="title is-2 publication-title">Towards Non-Structural Disturbance Prediction: Feedback-Calibrated Meta-Adaptation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
