use youtube embed

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
+  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG" />
+  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG" />
+  <meta property="og:url" content="URL OF THE WEBSITE" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
 
   <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
@@ -26,15 +27,13 @@
 
   <title>Towards Non-Structural Disturbance Prediction: Feedback-Calibrated Meta-Adaptation</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
   <link rel="stylesheet" href="static/css/bulma-slider.min.css">
   <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
-  <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="static/css/index.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -44,6 +43,7 @@
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
 </head>
+
 <body>
 
 
@@ -52,7 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-2 publication-title">Towards Non-Structural Disturbance Prediction: Feedback-Calibrated Meta-Adaptation</h1>
+            <h1 class="title is-2 publication-title">Towards Non-Structural Disturbance Prediction: Feedback-Calibrated
+              Meta-Adaptation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -64,15 +65,15 @@
                 <span class="author-block">Kexin Guo,</span>
                 <span class="author-block">Xiang Yu</span> -->
                 <span class="author-block">anonymous authors</span>
-                </div>
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">address<br>CoRL 2025</span>
-                  </div>
+            </div>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">address<br>CoRL 2025</span>
+            </div>
 
-                  <div class="column has-text-centered">
-                    <div class="publication-links">
-                         <!-- Arxiv PDF link -->
-                      <!-- <span class="link-block">
+            <div class="column has-text-centered">
+              <div class="publication-links">
+                <!-- Arxiv PDF link -->
+                <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -82,8 +83,8 @@
                       </a>
                     </span> -->
 
-                    <!-- Supplementary PDF link -->
-                    <!-- <span class="link-block">
+                <!-- Supplementary PDF link -->
+                <!-- <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -93,8 +94,8 @@
                     </a>
                   </span> -->
 
-                  <!-- Github link -->
-                  <!-- <span class="link-block">
+                <!-- Github link -->
+                <!-- <span class="link-block">
                     <a href="https://github.com/YOUR REPO HERE" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -114,85 +115,89 @@
                   <span>arXiv</span>
                 </a>
               </span> -->
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Image and Brief Intro -->
-<section class="hero teaser">
-  <div class="hero-body">
-    <div class="container is-max-desktop">
+  <!-- Image and Brief Intro -->
+  <section class="hero teaser">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <div class="content has-text-justified">
+              <p class="has-text-centered">
+                <img src="static/images/Framework.png">
+              </p>
+              <p>
+                We provide a <b>generalizable solution</b> for control and estimation
+                of robotic systems in general disturbed environments.
+                Its core philosophy -<b>"learning generalizable representations from diverse simulations while
+                  leveraging real-time feedback to tackle unknowns"</b>,
+                bridges adaptive control/ estimation <b>from structured assumptions to more realistic
+                  generalization.</b>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Teaser video-->
+  <section class="section hero teaser">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
+          <h2 class="title is-3">Video</h2>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/8YQyFSo49Ww?si=fjNEbE9B0dSKyD6j"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+  </section>
+
+  <!-- End teaser video -->
+
+  <!-- Paper abstract -->
+  <section class="section hero-teaser">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-12">
+          <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
-            <p class="has-text-centered">
-              <img src="static/images/Framework.png">
-            </p>
             <p>
-              We provide a <b>generalizable solution</b> for control and estimation 
-              of robotic systems in general disturbed environments. 
-              Its core philosophy -<b>"learning generalizable representations from diverse simulations while leveraging real-time feedback to tackle unknowns"</b>, 
-              bridges adaptive control/ estimation <b>from structured assumptions to more realistic generalization.</b>
+              Precise control in modern robotic applications is always an open issue due to unknown time-varying
+              disturbances.
+              Existing meta-learning-based approaches require a shared representation of environmental structures,
+              which lack flexibility for realistic non-structural disturbances.
+              Besides, representation error and the loss of model generalizability can lead to heavy prediction accuracy
+              degradation.
+              This work introduces a meta-learning-based disturbance estimation framework with feedback-calibrated
+              online adaptation.
+              With a generalizable spatial-temporal representation embedded with historical state information,
+              non-structural disturbances can be fully reflected by meta-learning.
+              The online adaptation process is then calibrated by a state-feedback mechanism to attenuate the learning
+              residual.
+              Theoretical analysis shows that simultaneous convergence of both the online learning error
+              and the disturbance estimation error can be achieved. By incorporating the meta-learned model with a
+              baseline controller,
+              it significantly outperforms the state-of-the-art methods in the quadrotor flight control under multiple
+              disturbances.
             </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-
-<!-- Teaser video-->
-<section class="section hero teaser">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <div class="content has-text-justified">
-          <video poster="" id="tree" autoplay controls muted loop height="80%">
-            <!-- Your video here -->
-            <source src="static/videos/nonstruct_demo.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-</section>
-
-<!-- End teaser video -->
-
-<!-- Paper abstract -->
-<section class="section hero-teaser">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-12">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <p>
-            Precise control in modern robotic applications is always an open issue due to unknown time-varying disturbances. 
-            Existing meta-learning-based approaches require a shared representation of environmental structures, 
-            which lack flexibility for realistic non-structural disturbances. 
-            Besides, representation error and the loss of model generalizability can lead to heavy prediction accuracy degradation. 
-            This work introduces a meta-learning-based disturbance estimation framework with feedback-calibrated online adaptation. 
-            With a generalizable spatial-temporal representation embedded with historical state information, 
-            non-structural disturbances can be fully reflected by meta-learning. 
-            The online adaptation process is then calibrated by a state-feedback mechanism to attenuate the learning residual. 
-            Theoretical analysis shows that simultaneous convergence of both the online learning error 
-            and the disturbance estimation error can be achieved. By incorporating the meta-learned model with a baseline controller, 
-            it significantly outperforms the state-of-the-art methods in the quadrotor flight control under multiple disturbances. 
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End paper abstract -->
-<!-- Image carousel -->
-<!-- <section class="hero is-small">
+  </section>
+  <!-- End paper abstract -->
+  <!-- Image carousel -->
+  <!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
@@ -228,11 +233,11 @@
 </div>
 </div>
 </section> -->
-<!-- End image carousel -->
+  <!-- End image carousel -->
 
 
-<!-- Youtube video -->
-<!-- <section class="hero is-small is-light">
+  <!-- Youtube video -->
+  <!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Video Presentation</h2>
@@ -247,10 +252,10 @@
     </div>
   </div>
 </section> -->
-<!-- End youtube video -->
+  <!-- End youtube video -->
 
-<!-- Video carousel -->
-<!-- <section class="hero is-small">
+  <!-- Video carousel -->
+  <!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Another Carousel</h2>
@@ -280,10 +285,10 @@
     </div>
   </div>
 </section> -->
-<!-- End video carousel -->
+  <!-- End video carousel -->
 
-<!-- Paper poster -->
-<!-- <section class="hero is-small is-light">
+  <!-- Paper poster -->
+  <!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -294,36 +299,37 @@
       </div>
     </div>
   </section> -->
-<!--End paper poster -->
+  <!--End paper poster -->
 
-<!--BibTex citation -->
+  <!--BibTex citation -->
   <!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>BibTex Code Here</code></pre>
     </div>
 </section> -->
-<!--End BibTex citation -->
+  <!--End BibTex citation -->
 
   <footer class="footer">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="content">
-          <p>
-            This page was built based on <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-          </p>
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column is-8">
+          <div class="content">
+            <p>
+              This page was built based on <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<!-- Statcounter tracking code -->
-  
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
+  <!-- Statcounter tracking code -->
 
-    <!-- End of Statcounter Code -->
+  <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
-  </body>
-  </html>
+  <!-- End of Statcounter Code -->
+
+</body>
+
+</html>
