add suppmat and change name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Towards Non-Structural Disturbance Prediction: Feedback-Calibrated Meta-Adaptation</title>
+  <title>Unified Meta-Representation and Feedback Calibration for General Disturbance Estimation</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -52,8 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-2 publication-title">Towards Non-Structural Disturbance Prediction: Feedback-Calibrated
-              Meta-Adaptation</h1>
+            <h1 class="title is-2 publication-title">Unified Meta-Representation and Feedback Calibration for General Disturbance Estimation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -102,6 +101,17 @@
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code</span>
+                  </a>
+                </span>
+
+                <!-- SuppMat. link -->
+                <span class="link-block">
+                    <a href="static/pdfs/apdx.pdf" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Supp. Mat.</span>
                   </a>
                 </span>
 
