--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="column is-four-fifths">
             <div class="content has-text-justified">
               <p class="has-text-centered">
-                <img src="static/images/Framework.png">
+                <img src="static/images/framework.png">
               </p>
               <p>
                 We provide a <b>generalizable solution</b> for control and estimation
