--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <!-- <a href="https://zzhanyoung.github.io/" target="_blank">Zihan Yang</a>,</span>
+                <a href="https://zzhanyoung.github.io/" target="_blank">Zihan Yang</a>,</span>
                 <span class="author-block">
                 <a href="https://sites.google.com/view/jindou-jia" target="_blank">Jindou Jia</a>,</span>
                 <span class="author-block">Meng Wang,</span>
                 <span class="author-block">Yuhang Liu,</span>
                 <span class="author-block">Kexin Guo,</span>
-                <span class="author-block">Xiang Yu</span> -->
-                <span class="author-block">anonymous authors</span>
+                <span class="author-block">Xiang Yu</span>
+                <!-- <span class="author-block">anonymous authors</span> -->
             </div>
             <div class="is-size-5 publication-authors">
               <span class="author-block">address<br>ICRA 2026</span>
@@ -72,26 +72,26 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
-                <!-- <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                <span class="link-block">
+                        <a href="https://arxiv.org/abs/2601.02762" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span> -->
+                    </span>
 
                 <!-- Supplementary PDF link -->
-                <!-- <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                <span class="link-block">
+                      <a href="static/pdfs/apdx.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span> -->
+                  </span>
 
                 <!-- Github link -->
                 <span class="link-block">
@@ -101,17 +101,6 @@
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code</span>
-                  </a>
-                </span>
-
-                <!-- SuppMat. link -->
-                <span class="link-block">
-                    <a href="static/pdfs/apdx.pdf" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Supp. Mat.</span>
                   </a>
                 </span>
 
