--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- <span class="author-block">anonymous authors</span> -->
             </div>
             <div class="is-size-5 publication-authors">
-              <span class="author-block">address<br>ICRA 2026</span>
+              <span class="author-block"><em>International Conference on Robotics and Automation (ICRA) 2026</em></span>
             </div>
 
             <div class="column has-text-centered">
